--- a/README.adoc
+++ b/README.adoc
@@ -3,6 +3,9 @@ Version {version}
 
 https://tumblr.github.io/PermissMe/java-docs.html[JavaDocs]
 
+== Download
+https://github.com/tumblr/PermissMe/blob/master/releases/PermissMe-1.0-beta.aar[Download the latest AAR]
+
 == Introduction
 PermissMe is a convenience library for handling callbacks and operations pertaining to granting access to runtime
 permissions in Android, SDK 23 and up. It enables the developer to target SDK 23 without having to add
